# cydra

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  can.did  canister_ids.json  dfx.json  import.sh  package.json
src/backend/: Cargo.toml  lib.rs
src/declarations/backend/: backend.did  backend.did.d.ts  backend.did.js
src/frontend/: App.tsx  README.md  index.css  index.html  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.js  vite.config.ts
src/frontend/components/: DatabasePanel.tsx  LoginOverlay.tsx  Pagination.tsx  ProtectedApp.tsx  SqlEditor.tsx  TableSidebar.tsx  UserSection.tsx
src/frontend/components/ui/: button.tsx
src/frontend/hooks/: useAuth.tsx  useCanister.ts
src/frontend/lib/: canister.ts
src/frontend/pages/: Index.tsx
src/frontend/src/: app.css  app.html
src/frontend/src/declarations/backend/: backend.did.d.ts
src/frontend/src/lib/: auth.js  canisters.js
src/frontend/src/routes/: +page.svelte
src/frontend/static/: .ic-assets.json5
