[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-sqlite = { path = "./ic-sqlite", version = "0.1.0" }
rusqlite = { package = "rusqlite-ic", version = "0.28", features = ["bundled", "serde_json"]}
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }